--- a/combined_phytophthora.Rmd
+++ b/combined_phytophthora.Rmd
@@ -2,7 +2,7 @@
 title: "combined_phytophthora"
 author: "Sam Muir"
 date: "2023-02-16"
-output: html_document
+output: github_document
 ---
 
 ```{r echo=FALSE, include=FALSE}
