--- a/combined_phytophthora.Rmd
+++ b/combined_phytophthora.Rmd
@@ -70,6 +70,7 @@ ANOVA (location + season)
 ```{r}
 aovcomb <- aov(cfu_ml ~ location+season*location, phyto_comb)
 summary(aovcomb)
+df.residual(aovcomb)
 ```
 
 ```{r}
